--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1586,6 +1586,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f386c10a-8b84-4056-85be-30bd0465effe",
+   "metadata": {},
+   "source": [
+    "### Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2da1515c-55f0-4546-884b-4f8382d76e41",
+   "metadata": {},
+   "source": [
+    "This will have to be done as it is not included in this repository\n",
+    "\n",
+    "1. Create a subfolder called data.\n",
+    "2. Download eicu_v2_0_1.sqlite3.gz from the Files section of the [project page](https://physionet.org/content/eicu-crd-demo/2.0.1/) (you have to click in the sqlite directory).\n",
+    "3. Move the downloaded file to ml-responsible/data.\n",
+    "4. Unzip the file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6982ead-e3a9-40fa-a5fc-d33d111092bc",
+   "metadata": {},
+   "source": [
+    "### Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7ba8617-cd72-49db-a58f-3669e4528211",
+   "metadata": {},
+   "source": [
+    "eICU Collaborative Research Database Demo was derived from:\n",
+    "[eICU Collaborative Research Database v2.0](https://physionet.org/content/eicu-crd/2.0/).\n",
+    "\n",
+    "The Alan Turing Institute [Understanding artificial intelligence ethics and safety](https://www.turing.ac.uk/sites/default/files/2019-08/understanding_artificial_intelligence_ethics_and_safety.pdf) document (97 pages).\n",
+    "\n",
+    "An [ACM 2018 statement](https://web.archive.org/web/20200101022756/https://acm-fca.org/2018/03/29/negativeimpacts/) also given as arxiv [paper](https://arxiv.org/pdf/2112.09544.pdf)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9670410e-f68f-4f51-8ba7-cad7a1925881",
    "metadata": {},
    "source": [
@@ -1598,6 +1640,41 @@
    "metadata": {},
    "source": [
     "Course notes are [here](https://carpentries-incubator.github.io/machine-learning-trees-python/)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdfb3ddc-1e37-4287-b204-6518ea3f8c67",
+   "metadata": {},
+   "source": [
+    "### Setup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c16c9a79-e4ed-4a3c-ae79-f6e3b2b56eb1",
+   "metadata": {},
+   "source": [
+    "1. Download [eicu_cohort_trees.csv](https://carpentries-incubator.github.io/machine-learning-trees-python/data/eicu_cohort_trees.csv).\n",
+    "2. Create a folder called `carpentries-ml-trees` on your Desktop.\n",
+    "3. Move downloaded files to `carpentries-ml-trees`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1984a90c-fe00-474a-808c-2cc68be38f49",
+   "metadata": {},
+   "source": [
+    "# Suggested changes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "735e711d-2204-41bf-9e7c-c3b563b16649",
+   "metadata": {},
+   "source": [
+    "* Deploy into the same directory for the courses\n",
+    "* All should probably use the `data` subdirectory"
    ]
   }
  ],
