Added some more content.

--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1655,10 +1655,354 @@
    "id": "c16c9a79-e4ed-4a3c-ae79-f6e3b2b56eb1",
    "metadata": {},
    "source": [
-    "1. Download [eicu_cohort_trees.csv](https://carpentries-incubator.github.io/machine-learning-trees-python/data/eicu_cohort_trees.csv).\n",
-    "2. Create a folder called `carpentries-ml-trees` on your Desktop.\n",
-    "3. Move downloaded files to `carpentries-ml-trees`."
+    "Download the [eicu_cohort_trees.csv](https://carpentries-incubator.github.io/machine-learning-trees-python/data/eicu_cohort_trees.csv) file and place with the other data files.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ac92fa3-9a79-42fa-9ecf-a24bf45cae61",
+   "metadata": {},
+   "source": [
+    "### Loading the patient cohort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e9455f02-ab2b-43fd-ba24-ba95e08b7cd3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>admissionweight</th>\n",
+       "      <th>unabridgedhosplos</th>\n",
+       "      <th>acutephysiologyscore</th>\n",
+       "      <th>apachescore</th>\n",
+       "      <th>actualhospitalmortality</th>\n",
+       "      <th>heartrate</th>\n",
+       "      <th>meanbp</th>\n",
+       "      <th>creatinine</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>respiratoryrate</th>\n",
+       "      <th>wbc</th>\n",
+       "      <th>admissionheight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>48</td>\n",
+       "      <td>86.4</td>\n",
+       "      <td>27.5583</td>\n",
+       "      <td>44</td>\n",
+       "      <td>49</td>\n",
+       "      <td>ALIVE</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>1.16</td>\n",
+       "      <td>36.9</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>177.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>59</td>\n",
+       "      <td>66.6</td>\n",
+       "      <td>15.0778</td>\n",
+       "      <td>56</td>\n",
+       "      <td>61</td>\n",
+       "      <td>ALIVE</td>\n",
+       "      <td>134.0</td>\n",
+       "      <td>172.0</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>34.8</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>25.5</td>\n",
+       "      <td>170.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>31</td>\n",
+       "      <td>66.8</td>\n",
+       "      <td>2.7326</td>\n",
+       "      <td>45</td>\n",
+       "      <td>45</td>\n",
+       "      <td>ALIVE</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>21.4</td>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>51</td>\n",
+       "      <td>77.1</td>\n",
+       "      <td>0.1986</td>\n",
+       "      <td>19</td>\n",
+       "      <td>24</td>\n",
+       "      <td>ALIVE</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>-1.00</td>\n",
+       "      <td>36.8</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>48</td>\n",
+       "      <td>63.4</td>\n",
+       "      <td>1.7285</td>\n",
+       "      <td>25</td>\n",
+       "      <td>30</td>\n",
+       "      <td>ALIVE</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>68.0</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>172.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender age  admissionweight  unabridgedhosplos  acutephysiologyscore  \\\n",
+       "0  Female  48             86.4            27.5583                    44   \n",
+       "1  Female  59             66.6            15.0778                    56   \n",
+       "2    Male  31             66.8             2.7326                    45   \n",
+       "3  Female  51             77.1             0.1986                    19   \n",
+       "4  Female  48             63.4             1.7285                    25   \n",
+       "\n",
+       "   apachescore actualhospitalmortality  heartrate  meanbp  creatinine  \\\n",
+       "0           49                   ALIVE      102.0    54.0        1.16   \n",
+       "1           61                   ALIVE      134.0   172.0        1.03   \n",
+       "2           45                   ALIVE      138.0    71.0        2.35   \n",
+       "3           24                   ALIVE      122.0    73.0       -1.00   \n",
+       "4           30                   ALIVE      130.0    68.0        1.10   \n",
+       "\n",
+       "   temperature  respiratoryrate   wbc  admissionheight  \n",
+       "0         36.9             39.0   6.1            177.8  \n",
+       "1         34.8             32.0  25.5            170.2  \n",
+       "2         37.2             34.0  21.4            188.0  \n",
+       "3         36.8             26.0  -1.0            160.0  \n",
+       "4         -1.0             29.0   7.6            172.7  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import libraries\n",
+    "import os\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "# load the data\n",
+    "cohort = pd.read_csv('./eicu_cohort_trees.csv')\n",
+    "\n",
+    "# Display the first 5 rows of the data\n",
+    "cohort.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "469e2d68-9c09-48d0-ae03-71be95401558",
+   "metadata": {},
+   "source": [
+    "### Preparing for data analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9481e815-2663-4b42-8961-9c7cdeae132a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode the categorical data\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "encoder = LabelEncoder()\n",
+    "cohort['actualhospitalmortality_enc'] = encoder.fit_transform(cohort['actualhospitalmortality'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f94f97b3-abeb-440c-b84a-56ff50d86348",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Handle the deidentified ages\n",
+    "cohort['age'] = pd.to_numeric(cohort['age'], downcast='integer', errors='coerce')\n",
+    "cohort['age'] = cohort['age'].fillna(value=91.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "e07e3f46-eebc-4248-bd8c-ca51653bcf16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Disable FutureWarning messages\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e6246110-b527-46ce-9a39-7c0b9984a037",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "╒════════════════════════════════════╤═════════╤═══════════╤══════════════╤══════════════╤══════════════╕\n",
+      "│                                    │         │ Missing   │ Overall      │ ALIVE        │ EXPIRED      │\n",
+      "╞════════════════════════════════════╪═════════╪═══════════╪══════════════╪══════════════╪══════════════╡\n",
+      "│ n                                  │         │           │ 536          │ 488          │ 48           │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ gender, n (%)                      │ Female  │ 0         │ 305 (56.9)   │ 281 (57.6)   │ 24 (50.0)    │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│                                    │ Male    │           │ 230 (42.9)   │ 207 (42.4)   │ 23 (47.9)    │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│                                    │ Unknown │           │ 1 (0.2)      │              │ 1 (2.1)      │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ age, mean (SD)                     │         │ 0         │ 63.4 (17.4)  │ 62.2 (17.4)  │ 75.2 (12.6)  │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ admissionweight, mean (SD)         │         │ 16        │ 81.8 (25.0)  │ 82.3 (25.1)  │ 77.0 (23.3)  │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ unabridgedhosplos, mean (SD)       │         │ 0         │ 5.6 (6.8)    │ 5.7 (6.7)    │ 4.3 (7.8)    │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ acutephysiologyscore, mean (SD)    │         │ 0         │ 41.7 (22.7)  │ 38.5 (18.8)  │ 74.3 (31.7)  │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ apachescore, mean (SD)             │         │ 0         │ 53.6 (25.1)  │ 49.9 (21.1)  │ 91.8 (30.5)  │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ heartrate, mean (SD)               │         │ 0         │ 101.5 (32.9) │ 100.3 (31.9) │ 113.9 (40.0) │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ meanbp, mean (SD)                  │         │ 0         │ 89.6 (41.5)  │ 90.7 (40.7)  │ 78.8 (47.6)  │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ creatinine, mean (SD)              │         │ 0         │ 0.8 (2.0)    │ 0.8 (2.0)    │ 1.4 (1.8)    │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ temperature, mean (SD)             │         │ 0         │ 35.6 (5.6)   │ 35.9 (4.8)   │ 32.9 (10.4)  │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ respiratoryrate, mean (SD)         │         │ 0         │ 27.4 (15.5)  │ 26.8 (15.4)  │ 33.9 (15.2)  │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ wbc, mean (SD)                     │         │ 0         │ 6.5 (7.6)    │ 6.2 (7.1)    │ 9.9 (11.2)   │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ admissionheight, mean (SD)         │         │ 8         │ 168.4 (14.5) │ 168.2 (13.6) │ 170.3 (21.5) │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│ actualhospitalmortality_enc, n (%) │ 0       │ 0         │ 488 (91.0)   │ 488 (100.0)  │              │\n",
+      "├────────────────────────────────────┼─────────┼───────────┼──────────────┼──────────────┼──────────────┤\n",
+      "│                                    │ 1       │           │ 48 (9.0)     │              │ 48 (100.0)   │\n",
+      "╘════════════════════════════════════╧═════════╧═══════════╧══════════════╧══════════════╧══════════════╛\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tableone import tableone\n",
+    "\n",
+    "t1 = tableone(cohort, groupby='actualhospitalmortality')\n",
+    "#print(t1.tabulate(tablefmt = \"github\"))\n",
+    "print(t1.tabulate(tablefmt = \"fancy_grid\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "674e0630-5ef4-4cbc-b214-ef4dcda210ff",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73927fff-7451-4f4f-8ffe-e57f3c6f2188",
+   "metadata": {},
+   "source": [
+    "a) What proportion of patients survived their hospital stay?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b8a3825-ab5a-4b94-8035-d320d6084847",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ad73b03-d052-4bb7-b80e-195130d10983",
+   "metadata": {},
+   "source": [
+    "b) What is the “apachescore” variable? Hint, see the [Wikipeda entry for the Apache Score](https://en.wikipedia.org/wiki/APACHE_II)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5b8cdbb-5f5f-4138-a375-c3a5bdb089ad",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "676d644b-e980-498b-91e5-88f03cb7ed71",
+   "metadata": {},
+   "source": [
+    "c) What is the average age of patients?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be81839b-d252-47a2-bf57-392c9bf1e2a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1674,7 +2018,7 @@
    "metadata": {},
    "source": [
     "* Deploy into the same directory for the courses\n",
-    "* All should probably use the `data` subdirectory"
+    "* All should probably use the `data` "
    ]
   }
  ],
