Removing futurewarning messages from upstream content.

--- a/ML.ipynb
+++ b/ML.ipynb
@@ -241,29 +241,27 @@
    "id": "468960ad-2b60-4a88-a972-2c3c14425706",
    "metadata": {},
    "source": [
-    "This gives lots of `FutureWarning` messages from `tableone` when using Python 3.11."
+    "Run the line below otherwise you get a lot of `FutureWarning` messages from `tableone` when using Python 3.11."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
+   "id": "07ee9f64-091b-453d-804e-a052c166540a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Disable FutureWarning messages\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "id": "8b53ef30",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mario/anaconda3/lib/python3.11/site-packages/tableone/tableone.py:927: FutureWarning: The provided callable <function mean at 0x10c0d7380> is currently using DataFrameGroupBy.mean. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"mean\" instead.\n",
-      "  df_cont = pd.pivot_table(cont_data,\n",
-      "/Users/mario/anaconda3/lib/python3.11/site-packages/tableone/tableone.py:927: FutureWarning: The provided callable <function median at 0x10c3a9300> is currently using DataFrameGroupBy.median. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"median\" instead.\n",
-      "  df_cont = pd.pivot_table(cont_data,\n",
-      "/Users/mario/anaconda3/lib/python3.11/site-packages/tableone/tableone.py:927: FutureWarning: The provided callable <built-in function min> is currently using DataFrameGroupBy.min. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"min\" instead.\n",
-      "  df_cont = pd.pivot_table(cont_data,\n",
-      "/Users/mario/anaconda3/lib/python3.11/site-packages/tableone/tableone.py:927: FutureWarning: The provided callable <built-in function max> is currently using DataFrameGroupBy.max. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"max\" instead.\n",
-      "  df_cont = pd.pivot_table(cont_data,\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -302,154 +300,171 @@
        "      <th>n</th>\n",
        "      <th></th>\n",
        "      <td></td>\n",
-       "      <td>235</td>\n",
-       "      <td>195</td>\n",
-       "      <td>40</td>\n",
+       "      <td>536</td>\n",
+       "      <td>488</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th rowspan=\"3\" valign=\"top\">gender, n (%)</th>\n",
        "      <th>Female</th>\n",
        "      <td>0</td>\n",
-       "      <td>116 (49.4)</td>\n",
-       "      <td>101 (51.8)</td>\n",
-       "      <td>15 (37.5)</td>\n",
+       "      <td>305 (56.9)</td>\n",
+       "      <td>281 (57.6)</td>\n",
+       "      <td>24 (50.0)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Male</th>\n",
        "      <td></td>\n",
-       "      <td>118 (50.2)</td>\n",
-       "      <td>94 (48.2)</td>\n",
-       "      <td>24 (60.0)</td>\n",
+       "      <td>230 (42.9)</td>\n",
+       "      <td>207 (42.4)</td>\n",
+       "      <td>23 (47.9)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Unknown</th>\n",
        "      <td></td>\n",
-       "      <td>1 (0.4)</td>\n",
+       "      <td>1 (0.2)</td>\n",
        "      <td></td>\n",
-       "      <td>1 (2.5)</td>\n",
+       "      <td>1 (2.1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>age, mean (SD)</th>\n",
        "      <th></th>\n",
-       "      <td>9</td>\n",
-       "      <td>61.9 (15.5)</td>\n",
-       "      <td>60.5 (15.8)</td>\n",
-       "      <td>69.3 (11.5)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>63.4 (17.4)</td>\n",
+       "      <td>62.2 (17.4)</td>\n",
+       "      <td>75.2 (12.6)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>admissionweight, mean (SD)</th>\n",
        "      <th></th>\n",
-       "      <td>5</td>\n",
-       "      <td>87.6 (28.0)</td>\n",
-       "      <td>88.6 (28.8)</td>\n",
-       "      <td>82.3 (23.3)</td>\n",
+       "      <td>16</td>\n",
+       "      <td>81.8 (25.0)</td>\n",
+       "      <td>82.3 (25.1)</td>\n",
+       "      <td>77.0 (23.3)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>length of stay, mean (SD)</th>\n",
        "      <th></th>\n",
        "      <td>0</td>\n",
-       "      <td>9.2 (8.6)</td>\n",
-       "      <td>9.6 (7.5)</td>\n",
-       "      <td>6.9 (12.5)</td>\n",
+       "      <td>5.6 (6.8)</td>\n",
+       "      <td>5.7 (6.7)</td>\n",
+       "      <td>4.3 (7.8)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>acutephysiologyscore, mean (SD)</th>\n",
        "      <th></th>\n",
        "      <td>0</td>\n",
-       "      <td>59.9 (28.1)</td>\n",
-       "      <td>54.5 (23.1)</td>\n",
-       "      <td>86.7 (34.7)</td>\n",
+       "      <td>41.7 (22.7)</td>\n",
+       "      <td>38.5 (18.8)</td>\n",
+       "      <td>74.3 (31.7)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>apachescore, mean (SD)</th>\n",
        "      <th></th>\n",
        "      <td>0</td>\n",
-       "      <td>71.2 (30.3)</td>\n",
-       "      <td>64.6 (24.5)</td>\n",
-       "      <td>103.5 (34.9)</td>\n",
+       "      <td>53.6 (25.1)</td>\n",
+       "      <td>49.9 (21.1)</td>\n",
+       "      <td>91.8 (30.5)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>heartrate, mean (SD)</th>\n",
        "      <th></th>\n",
        "      <td>0</td>\n",
-       "      <td>108.7 (33.1)</td>\n",
-       "      <td>107.9 (30.6)</td>\n",
-       "      <td>112.9 (43.2)</td>\n",
+       "      <td>101.5 (32.9)</td>\n",
+       "      <td>100.3 (31.9)</td>\n",
+       "      <td>113.9 (40.0)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean blood pressure, mean (SD)</th>\n",
        "      <th></th>\n",
        "      <td>0</td>\n",
-       "      <td>93.2 (47.0)</td>\n",
-       "      <td>92.1 (45.4)</td>\n",
-       "      <td>98.6 (54.5)</td>\n",
+       "      <td>89.6 (41.5)</td>\n",
+       "      <td>90.7 (40.7)</td>\n",
+       "      <td>78.8 (47.6)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>creatinine, mean (SD)</th>\n",
        "      <th></th>\n",
        "      <td>0</td>\n",
-       "      <td>1.0 (1.7)</td>\n",
-       "      <td>0.9 (1.7)</td>\n",
-       "      <td>1.7 (1.6)</td>\n",
+       "      <td>0.8 (2.0)</td>\n",
+       "      <td>0.8 (2.0)</td>\n",
+       "      <td>1.4 (1.8)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>temperature, mean (SD)</th>\n",
        "      <th></th>\n",
        "      <td>0</td>\n",
-       "      <td>35.2 (6.5)</td>\n",
-       "      <td>36.1 (3.9)</td>\n",
-       "      <td>31.2 (12.4)</td>\n",
+       "      <td>35.6 (5.6)</td>\n",
+       "      <td>35.9 (4.8)</td>\n",
+       "      <td>32.9 (10.4)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>respiratoryrate, mean (SD)</th>\n",
        "      <th></th>\n",
        "      <td>0</td>\n",
-       "      <td>30.7 (15.2)</td>\n",
-       "      <td>29.9 (15.1)</td>\n",
-       "      <td>34.3 (15.6)</td>\n",
+       "      <td>27.4 (15.5)</td>\n",
+       "      <td>26.8 (15.4)</td>\n",
+       "      <td>33.9 (15.2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>white cell count, mean (SD)</th>\n",
        "      <th></th>\n",
        "      <td>0</td>\n",
-       "      <td>10.5 (8.4)</td>\n",
-       "      <td>10.7 (8.2)</td>\n",
-       "      <td>9.7 (9.7)</td>\n",
+       "      <td>6.5 (7.6)</td>\n",
+       "      <td>6.2 (7.1)</td>\n",
+       "      <td>9.9 (11.2)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>admissionheight, mean (SD)</th>\n",
        "      <th></th>\n",
-       "      <td>2</td>\n",
-       "      <td>168.0 (12.8)</td>\n",
-       "      <td>167.7 (13.4)</td>\n",
-       "      <td>169.4 (9.1)</td>\n",
+       "      <td>8</td>\n",
+       "      <td>168.4 (14.5)</td>\n",
+       "      <td>168.2 (13.6)</td>\n",
+       "      <td>170.3 (21.5)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">actualhospitalmortality_enc, n (%)</th>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>488 (91.0)</td>\n",
+       "      <td>488 (100.0)</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td>48 (9.0)</td>\n",
+       "      <td></td>\n",
+       "      <td>48 (100.0)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div><br />"
       ],
       "text/plain": [
-       "                                        Grouped by actualhospitalmortality                                          \n",
-       "                                                                   Missing       Overall         ALIVE       EXPIRED\n",
-       "n                                                                                    235           195            40\n",
-       "gender, n (%)                   Female                                   0    116 (49.4)    101 (51.8)     15 (37.5)\n",
-       "                                Male                                          118 (50.2)     94 (48.2)     24 (60.0)\n",
-       "                                Unknown                                          1 (0.4)                     1 (2.5)\n",
-       "age, mean (SD)                                                           9   61.9 (15.5)   60.5 (15.8)   69.3 (11.5)\n",
-       "admissionweight, mean (SD)                                               5   87.6 (28.0)   88.6 (28.8)   82.3 (23.3)\n",
-       "length of stay, mean (SD)                                                0     9.2 (8.6)     9.6 (7.5)    6.9 (12.5)\n",
-       "acutephysiologyscore, mean (SD)                                          0   59.9 (28.1)   54.5 (23.1)   86.7 (34.7)\n",
-       "apachescore, mean (SD)                                                   0   71.2 (30.3)   64.6 (24.5)  103.5 (34.9)\n",
-       "heartrate, mean (SD)                                                     0  108.7 (33.1)  107.9 (30.6)  112.9 (43.2)\n",
-       "mean blood pressure, mean (SD)                                           0   93.2 (47.0)   92.1 (45.4)   98.6 (54.5)\n",
-       "creatinine, mean (SD)                                                    0     1.0 (1.7)     0.9 (1.7)     1.7 (1.6)\n",
-       "temperature, mean (SD)                                                   0    35.2 (6.5)    36.1 (3.9)   31.2 (12.4)\n",
-       "respiratoryrate, mean (SD)                                               0   30.7 (15.2)   29.9 (15.1)   34.3 (15.6)\n",
-       "white cell count, mean (SD)                                              0    10.5 (8.4)    10.7 (8.2)     9.7 (9.7)\n",
-       "admissionheight, mean (SD)                                               2  168.0 (12.8)  167.7 (13.4)   169.4 (9.1)"
+       "                                           Grouped by actualhospitalmortality                                          \n",
+       "                                                                      Missing       Overall         ALIVE       EXPIRED\n",
+       "n                                                                                       536           488            48\n",
+       "gender, n (%)                      Female                                   0    305 (56.9)    281 (57.6)     24 (50.0)\n",
+       "                                   Male                                          230 (42.9)    207 (42.4)     23 (47.9)\n",
+       "                                   Unknown                                          1 (0.2)                     1 (2.1)\n",
+       "age, mean (SD)                                                              0   63.4 (17.4)   62.2 (17.4)   75.2 (12.6)\n",
+       "admissionweight, mean (SD)                                                 16   81.8 (25.0)   82.3 (25.1)   77.0 (23.3)\n",
+       "length of stay, mean (SD)                                                   0     5.6 (6.8)     5.7 (6.7)     4.3 (7.8)\n",
+       "acutephysiologyscore, mean (SD)                                             0   41.7 (22.7)   38.5 (18.8)   74.3 (31.7)\n",
+       "apachescore, mean (SD)                                                      0   53.6 (25.1)   49.9 (21.1)   91.8 (30.5)\n",
+       "heartrate, mean (SD)                                                        0  101.5 (32.9)  100.3 (31.9)  113.9 (40.0)\n",
+       "mean blood pressure, mean (SD)                                              0   89.6 (41.5)   90.7 (40.7)   78.8 (47.6)\n",
+       "creatinine, mean (SD)                                                       0     0.8 (2.0)     0.8 (2.0)     1.4 (1.8)\n",
+       "temperature, mean (SD)                                                      0    35.6 (5.6)    35.9 (4.8)   32.9 (10.4)\n",
+       "respiratoryrate, mean (SD)                                                  0   27.4 (15.5)   26.8 (15.4)   33.9 (15.2)\n",
+       "white cell count, mean (SD)                                                 0     6.5 (7.6)     6.2 (7.1)    9.9 (11.2)\n",
+       "admissionheight, mean (SD)                                                  8  168.4 (14.5)  168.2 (13.6)  170.3 (21.5)\n",
+       "actualhospitalmortality_enc, n (%) 0                                        0    488 (91.0)   488 (100.0)              \n",
+       "                                   1                                               48 (9.0)                  48 (100.0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
