Training in trees.

--- a/ML.ipynb
+++ b/ML.ipynb
@@ -1980,28 +1980,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9b8a3825-ab5a-4b94-8035-d320d6084847",
+   "cell_type": "markdown",
+   "id": "9e570a39-9a9a-4f92-a919-144cb513d6d2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "488 (ALIVE)/ 536 (overall) ~ 91%"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "7ad73b03-d052-4bb7-b80e-195130d10983",
    "metadata": {},
    "source": [
-    "b) What is the “apachescore” variable? Hint, see the [Wikipeda entry for the Apache Score](https://en.wikipedia.org/wiki/APACHE_II)."
+    "b) What is the “apachescore” variable? Hint, see the [Wikipeda entry for the Apachescore](https://en.wikipedia.org/wiki/APACHE_II)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a5b8cdbb-5f5f-4138-a375-c3a5bdb089ad",
+   "cell_type": "markdown",
+   "id": "4dad776b-6a8d-4586-827a-4693ba0b52f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "score applied within 24 hours of admission of a patient to an intensive care unit (ICU): an integer score from 0 to 71 is computed based on several measurements; higher scores correspond to more severe disease and a higher risk of death."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2012,12 +2012,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5c486497-846b-4d39-b440-e82a4db3da61",
+   "metadata": {},
+   "source": [
+    "Mean is 63.4 but median is a better measure."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "be81839b-d252-47a2-bf57-392c9bf1e2a1",
+   "execution_count": 27,
+   "id": "24034627-c5e9-493e-bc47-2bab0fdb6d1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cohort['age'].median()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88f3e50b-f72a-4563-a6e7-4990df9c5155",
+   "metadata": {},
+   "source": [
+    "### Creating training and test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "e0f83600-a840-40e7-a48f-c8d333956bf1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "features = ['age','acutephysiologyscore']\n",
+    "outcome = 'actualhospitalmortality_enc'\n",
+    "\n",
+    "x = cohort[features]\n",
+    "y = cohort[outcome]\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size = 0.7, random_state =  42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74bee97a-483b-4553-aaeb-c1b083f538ea",
+   "metadata": {},
+   "source": [
+    "### Exercise"
+   ]
   },
   {
    "cell_type": "markdown",
