Removed the SQL eample - not needed.

--- a/ML.ipynb
+++ b/ML.ipynb
@@ -203,33 +203,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f258725",
-   "metadata": {},
-   "source": [
-    "### SQL Query"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "950c504c",
-   "metadata": {},
-   "source": [
-    "```sql\n",
-    "SELECT p.gender, SAFE_CAST(p.age as int64) as age, p.admissionweight,\n",
-    "       a.unabridgedhosplos, a.acutephysiologyscore, a.apachescore, a.actualhospitalmortality,\n",
-    "       av.heartrate, av.meanbp, av.creatinine, av.temperature, av.respiratoryrate,\n",
-    "       av.wbc, p.admissionheight\n",
-    "FROM `physionet-data.eicu_crd_demo.patient` p\n",
-    "INNER JOIN `physionet-data.eicu_crd_demo.apachepatientresult` a\n",
-    "ON p.patientunitstayid = a.patientunitstayid\n",
-    "INNER JOIN `physionet-data.eicu_crd_demo.apacheapsvar` av\n",
-    "ON p.patientunitstayid = av.patientunitstayid\n",
-    "WHERE apacheversion LIKE 'IVa'\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "04b376b0",
    "metadata": {},
    "source": [
@@ -2073,6 +2046,38 @@
    "source": [
     "### Exercise"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2388a54d-a9b1-41c4-8b6d-a91d0935f172",
+   "metadata": {},
+   "source": [
+    "a) Why did we split our data into training and test sets?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5fc169c7-3c4d-45cc-bc44-2a9ae2418e3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "531941fa-a015-432e-8daa-50d71054a649",
+   "metadata": {},
+   "source": [
+    "b) What is the effect of setting a random state in the splotting algorithm?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b9eaa51-12ad-4e69-9f7b-8d625feb89cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
